tests/sksl/errors/StaticIfTest.dsl.glsl
### Compilation failed:

error: static if has non-static test

1 error
